--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.0",
+		"mobx": "^5.15.4",
+		"mobx-react": "^6.2.2",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.1.1",
 		"react-dom": "^16.13.1",
@@ -26,8 +28,16 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"devDependencies": {
 		"gh-pages": "^3.1.0"
