updated homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://amit-ghosh.com/react-product-alert",
+	"homepage": "https://amit-ghosh.com/bargain",
 	"name": "react-product-alert",
 	"version": "0.1.0",
 	"private": true,
