fixed not displaying refreshed product when the email don't have any product added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://amit-ghosh.com/bargain",
+	"homepage": "https://amit-ghosh.com/bargain-react",
 	"name": "react-product-alert",
 	"version": "0.1.0",
 	"private": true,
